[package]
name = "spf"
authors = [ "SuperPlatformFunctionality Dev Team" ]
description = "SPF based on Moonbeam"
edition = "2021"
homepage = "https://superpf.io"
license = "GPL-3.0-only"
version = "0.12.3"

[[bin]]
name = 'spf'
path = 'src/main.rs'

[dependencies]
futures = { version = "0.3.1", features = [ "compat" ] }

moonbeam-cli = { path = "cli", default-features = false }
moonbeam-service = { path = "service", default-features = false }

[dev-dependencies]
assert_cmd = "0.12"
hex = "0.4.3"
nix = "0.23"
serde = { version = "1.0.101", features = [ "derive" ] }
serde_json = "1.0"
tempfile = "3.2.0"
tracing-core = "0.1.29"

# Benchmarking
pallet-xcm = { git = "https://github.com/purestake/polkadot", branch = "moonbeam-polkadot-v0.9.29" }
xcm-builder = { git = "https://github.com/purestake/polkadot", branch = "moonbeam-polkadot-v0.9.29" }

[features]
default = ["moonbeam-native"]

kusama-native = [ "moonbeam-service/kusama-native" ]
rococo-native = [ "moonbeam-service/rococo-native" ]
westend-native = [ "moonbeam-cli/westend-native", "moonbeam-service/westend-native" ]

moonbeam-native = [ "moonbeam-cli/moonbeam-native", "moonbeam-service/moonbeam-native" ]

test-spec = []

runtime-benchmarks = [
	"moonbeam-cli/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
]
